--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,13 +1,13 @@
 required metdata
-sonar.projectKey=hello-world-springboot
+sonar.projectKey=qod-pipeline
 sonar.projectVersion=1.0
 sonar.sourceEncoding=UTF-8
 sonar.organization=default
 sonar.host.url=
 http://sonarqube.sonarqube.svc.cluster.local:9000
 sonar.login=a6c7b8c4ac080a06f78b044856bc184418bbce42
-sonar.projectLanguage=java
-sonar.java.binaries=target/classes
+sonar.projectLanguage=js
+#sonar.java.binaries=target/classes
 #sonar.eslint.eslintconfigpath=app/eslintrc.json
 # path to srouce directories
 sonar.sources=.
