--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -3,8 +3,7 @@ sonar.projectKey=qod-pipeline
 sonar.projectVersion=1.0
 sonar.sourceEncoding=UTF-8
 sonar.organization=default
-sonar.host.url=
-http://sonarqube.sonarqube.svc.cluster.local:9000
+sonar.host.url=http://sonarqube.sonarqube.svc.cluster.local:9000
 sonar.login=a6c7b8c4ac080a06f78b044856bc184418bbce42
 sonar.projectLanguage=js
 #sonar.java.binaries=target/classes
